--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
   "dependencies": {
     "async": "~0.2.8",
     "express": "~3.2.4",
-    "socket.io": "~0.9.14",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
+    "grunt-curl": "^2.1.0",
+    "grunt-exec": "^0.4.6",
     "plugapi": "https://registry.npmjs.org/plugapi/-/plugapi-3.1.2.tgz",
-    "prompt": "^0.2.14"
+    "prompt": "^0.2.14",
+    "socket.io": "~0.9.14"
   }
 }
